--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     
     <h2> Cour environnement de développement web 420-11E-MA, Prénom: Merzouk , Nom: Begriche</h2>
+    <h2> Ajout contribution github - Prénom: Hala, Nom: Kouidri</h2>
 </body>
 </html>
